--- a/blogpost.html
+++ b/blogpost.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El titulo del post.</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Hiperblog
+            <span>Tu blog de cabecera.</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post.</h1>
@@ -19,4 +21,5 @@
     </div>
     
 </body>
+
 </html>
