--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El titulo del post.</title>
@@ -12,6 +11,10 @@
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post.</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas interesantes que se pueden hacer con ramas.</p>
+            <p>Los blogs son la mejor forma de compartir información y tus ideas.
+                Mucho mas que ir a conferencias o salir en Youtube. Exepto si eres un rockstar.
+                Pero estadisticamente no lo eres.... por ahora.
+            </p>
         </div>
     </div>
     
