--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="cabecera">
             Hiperblog
-            <span>Tu blog de cabecera.</span>
+            <span>Tu blog de confianza.</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post.</h1>
@@ -22,8 +22,7 @@
                 Pero estadisticamente no lo eres.... por ahora.
             </p>
         </div>
-    </div>
-    
+    </div> 
 </body>
 
 </html>
