--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="cabecera">
             Hiperblog
-            <span>Tu blog de cabecera.</span>
+            <span>Tu blog maestro.</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post.</h1>
@@ -21,6 +21,7 @@
                 Mucho mas que ir a conferencias o salir en Youtube. Exepto si eres un rockstar.
                 Pero estadisticamente no lo eres.... por ahora.
             </p>
+            <p>Suscribete y dale like.</p>
         </div>
     </div>
     
